@@ -1,4 +1,9 @@
 // ------- Changelog for malloc lab ------- //
 1. Added basic functions from the book
     mm_init(), extend_heap(), mm_free(), coalesce(), mm_malloc()
-2. 20 min...
+2. Implemented basic linked list free list
+// ---------------- To Do ------------------//
+.5 footer
+1. splitting
+2. coallecing
+3. red-black tree
